--- a/Chat/templates/dashboard/home.html
+++ b/Chat/templates/dashboard/home.html
@@ -147,7 +147,7 @@
             <label class="control-label">Message....</label>
             <input type="text" class="form-control" name="message" id="id_message" placeholder="Type Here...">
           </div>
-          <button type="submit">Submit</button>
+          <button type="submit" class="btn btn-success mb-2" style="margin-left: 460px;">Submit</button>
     </form>
 </div>
 </div>
